# Bantiapp-v2

Bantiapp-API/: .gitignore  pyproject.toml
Bantiapp-UI/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
Bantiapp-UI/src/: App.tsx  index.css
Bantiapp-UI/src/components/: app-sidebar.tsx  login-form.tsx  mode-toggle.tsx  nav-user.tsx  theme-provider.tsx
Bantiapp-UI/src/pages/: home.tsx  login.tsx  settings.tsx
